--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,10 @@
   font-size: 18pt;
 }
 
+h2 {
+  font-weight: normal;
+}
+
 .overlay,
 .overlay-2 {
   position: fixed;
@@ -103,7 +107,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'DM Serif Display', 'Segoe UI', Tahoma, Geneva, Verdana,
+    sans-serif;
   font-size: 5rem;
   position: fixed;
   font-weight: 700;
@@ -216,69 +221,5 @@ main {
   35% {
     -webkit-transform: scale3D(0, 0, 1);
     transform: scale3D(0, 0, 1);
-  }
-}
-/*
-  Name
-*/
-.xBSeWKPw_0 {
-  stroke-dasharray: 546 548;
-  stroke-dashoffset: 547;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 0ms forwards;
-}
-.xBSeWKPw_1 {
-  stroke-dasharray: 442 444;
-  stroke-dashoffset: 443;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 375ms forwards;
-}
-.xBSeWKPw_2 {
-  stroke-dasharray: 582 584;
-  stroke-dashoffset: 583;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 750ms forwards;
-}
-.xBSeWKPw_3 {
-  stroke-dasharray: 348 350;
-  stroke-dashoffset: 349;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 1125ms forwards;
-}
-.xBSeWKPw_4 {
-  stroke-dasharray: 481 483;
-  stroke-dashoffset: 482;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 1500ms forwards;
-}
-.xBSeWKPw_5 {
-  stroke-dasharray: 466 468;
-  stroke-dashoffset: 467;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 1875ms forwards;
-}
-.xBSeWKPw_6 {
-  stroke-dasharray: 330 332;
-  stroke-dashoffset: 331;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 2250ms forwards;
-}
-.xBSeWKPw_7 {
-  stroke-dasharray: 468 470;
-  stroke-dashoffset: 469;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 2625ms forwards;
-}
-.xBSeWKPw_8 {
-  stroke-dasharray: 485 487;
-  stroke-dashoffset: 486;
-  animation: xBSeWKPw_draw 1000ms ease-in-out 3000ms forwards;
-}
-@keyframes xBSeWKPw_draw {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes xBSeWKPw_fade {
-  0% {
-    stroke-opacity: 1;
-  }
-  95.1219512195122% {
-    stroke-opacity: 1;
-  }
-  100% {
-    stroke-opacity: 0;
   }
 }
