--- a/static/global.css
+++ b/static/global.css
@@ -2,9 +2,9 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-transition-duration: 0s;
-          transition-duration: 0s;
+  transition-duration: 0s;
 }
 
 :root {
@@ -28,12 +28,19 @@ h2 {
 .overlay {
   z-index: 1;
   background: #101010;
-  background: -webkit-gradient(linear, left top, right top, from(#101010), color-stop(50%, transparent), to(#101010));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#101010),
+    color-stop(50%, transparent),
+    to(#101010)
+  );
   background: linear-gradient(90deg, #101010 0%, transparent 50%, #101010 100%);
 }
 .overlay-2 {
   -webkit-transition-duration: 1s;
-          transition-duration: 1s;
+  transition-duration: 1s;
   z-index: 2;
   background: #151515;
 }
@@ -48,16 +55,16 @@ body {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: rgb(16, 16, 16);
   animation: backgroundColor 60s infinite alternate-reverse;
   -webkit-transition-duration: 1s;
-          transition-duration: 1s;
+  transition-duration: 1s;
   z-index: 0;
 }
 
@@ -113,7 +120,7 @@ body {
   border-radius: 1rem;
   padding: 50px 0;
   -webkit-transition-duration: 1s;
-          transition-duration: 1s;
+  transition-duration: 1s;
 }
 
 .decoration-section {
@@ -143,8 +150,8 @@ main {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   padding: 2rem 0;
 }
 
@@ -159,14 +166,13 @@ main {
   display: flex;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-family: 'DM Serif Display', 'Segoe UI', Tahoma, Geneva, Verdana,
-    sans-serif;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 5rem;
   position: fixed;
   font-weight: 700;
