--- a/styles/global.css
+++ b/styles/global.css
@@ -112,8 +112,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana,
-    sans-serif;
+  font-family: Poppins, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 5rem;
   position: fixed;
   font-weight: 700;
